--- a/index.html
+++ b/index.html
@@ -77,6 +77,44 @@
                 <h1>Reported posts</h1>
             </div>
         </main>
+        <section class="container my-5">
+            <div>
+                <h4>1. How does JavaScript works?</h4>
+                <p><span class="fw-bold">Ans: </span>JavaScript is a high level interpreted language. It can handle one task at a time or a piece of code at a time. It runs the client side web browser. It is used to dynamically handle code. One of the most common uses of JavaScript is validate data given by the user.</p>
+            </div><br>
+           
+            <div>
+                <h4>2. Difference between local storage vs session storage?</h4>
+                <p><span class="fw-bold">Ans:
+                    <table class="table w-75 mx-auto">
+                        <thead>
+                          <tr>
+                            <th scope="col"></th>
+                            <th scope="col">Local storage</th>
+                            <th scope="col">Session storage</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <th scope="row">1</th>
+                            <td>Data is not expired.</td>
+                            <td>Data is cleared when page session ends.</td>
+                          </tr>
+                          <tr>
+                            <th scope="row">2</th>
+                            <td>Storage capacity is 5MB or 10 MB.</td>
+                            <td>Storage capacity is 5MB.</td>
+                          </tr>
+                          <tr>
+                            <th scope="row">3</th>
+                            <td>Client can read only Local storage.</td>
+                            <td>Client can not read session storage.</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                </span> </p>
+            </div>
+        </section>
         <footer></footer>
 
         <!-- add javascript  file  -->
